<resources>
    <string name="app_name">Popular Movies</string>
    <string name="search">Search</string>
    <string name="action_sort_by_most_popular">Most Popular</string>
    <string name="action_sort_by_top_rated">Top Rated</string>
    <string name="action_sort_by_favorites">Favorites</string>
    <string name="movie_poster">Movie Poster</string>
    <string name="release_date">Release Date</string>
    <string name="vote_average">Vote Average</string>
    <string name="popular">popular</string>
    <string name="top_rated">top_rated</string>
    <string name="sort_movies">Sort Movies</string>
    <string name="movie_trailers">Movie Trailers</string>
    <string name="movie_reviews_title">Reviews:</string>
    <string name="movie_trailers_title">Trailers:</string>
    <string name="favorite_movie_image">Favorite Movie Image</string>
    <string name="content_provider">Content Provider</string>
    <string name="button_favorite">Button Favorite</string>


</resources>
